--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,11 @@ sqlx = { version = "0.6", features = [
     "runtime-tokio-rustls",
 ] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+
+argon2 = { version = "0.4.1", features = ["std"] }
+rand = "0.8.5"
+serde = "1.0"
+uuid = { version = "1.2", features = ["serde"] }
+
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["std"] }
