--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = { git = "https://github.com/tokio-rs/axum" }
+axum = { git = "https://github.com/tokio-rs/axum", features = ["headers"] }
 hyper = "0.14"
 sqlx = { version = "0.6", features = [
     "macros",
@@ -14,9 +14,15 @@ sqlx = { version = "0.6", features = [
 ] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 
-argon2 = { version = "0.4.1", features = ["std"] }
-rand = "0.8.5"
+argon2 = { version = "0.4", features = ["std"] }
+async-lock = "2.6"
+async-trait = "0.1"
+base64 = "0.13"
+blake3 = "1.3"
+rand = "0.8"
 serde = "1.0"
+serde_json = "1.0"
+time = "0.3"
 uuid = { version = "1.2", features = ["serde"] }
 
 tracing = "0.1"
