--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ blake3 = "1.3"
 rand = "0.8"
 serde = "1.0"
 serde_json = "1.0"
+thiserror = "1.0"
 time = "0.3"
 uuid = { version = "1.2", features = ["serde"] }
 
