--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 axum = { git = "https://github.com/tokio-rs/axum", features = ["headers"] }
 hyper = "0.14"
+redis = { version = "0.22", features = ["aio", "tokio-comp"] }
 sqlx = { version = "0.6", features = [
     "macros",
     "migrate",
@@ -24,7 +25,7 @@ rand = "0.8"
 serde = "1.0"
 serde_json = "1.0"
 thiserror = "1.0"
-time = "0.3"
+time = { version = "0.3", features = ["serde"] }
 uuid = { version = "1.2", features = ["serde"] }
 
 tracing = "0.1"
