--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ sqlx = { version = "0.6", features = [
     "runtime-tokio-rustls",
     "uuid",
 ] }
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
 
 argon2 = { version = "0.4", features = ["std"] }
 async-lock = "2.6"
