--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
 argon2 = { version = "0.4", features = ["std"] }
 async-lock = "2.6"
 async-trait = "0.1"
+axum-macros = { git = "https://github.com/tokio-rs/axum" }
 base64 = "0.13"
 blake3 = "1.3"
 rand = "0.8"
